# cpp-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
cmake/: missionweaveprotocolConfig.cmake.in
examples/: CMakeLists.txt  sign_document.cpp  validate_frame.cpp
include/missionweaveprotocol/: bundle.hpp  canonical.hpp  conformance.hpp  crypto.hpp  frame.hpp  json.hpp  schema.hpp  signed_document.hpp  version.hpp
licenses/: jsoncons-LICENSE.txt
scripts/: check_readmes.py  check_repository_policy.py  generate_embedded_assets.py
src/: bundle.cpp  bundle_internal.hpp  canonical.cpp  conformance.cpp  conformance_main.cpp  crypto.cpp  embedded_assets.cpp  embedded_assets.hpp  frame.cpp  json.cpp  schema.cpp  schema_internal.hpp  signed_document.cpp  signed_document_internal.hpp  version.cpp
tests/: CMakeLists.txt  bundle_test.cpp  canonical_test.cpp  conformance_test.cpp  crypto_test.cpp  frame_test.cpp  json_test.cpp  schema_test.cpp  signed_document_test.cpp  version_test.cpp
tests/package-consumer/: CMakeLists.txt  main.cpp
