add_executable(missionweaveprotocol_foundation_test version_test.cpp)
target_link_libraries(missionweaveprotocol_foundation_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_foundation_test PRIVATE cxx_std_20)

add_test(NAME foundation COMMAND missionweaveprotocol_foundation_test)

add_executable(missionweaveprotocol_bundle_test bundle_test.cpp)
target_link_libraries(missionweaveprotocol_bundle_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_bundle_test PRIVATE cxx_std_20)
target_include_directories(missionweaveprotocol_bundle_test PRIVATE ${PROJECT_SOURCE_DIR}/src)
target_compile_definitions(
  missionweaveprotocol_bundle_test
  PRIVATE MISSIONWEAVEPROTOCOL_SOURCE_DIR="${PROJECT_SOURCE_DIR}")

add_test(NAME bundle COMMAND missionweaveprotocol_bundle_test)

add_executable(missionweaveprotocol_json_test json_test.cpp)
target_link_libraries(missionweaveprotocol_json_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_json_test PRIVATE cxx_std_20)
add_test(NAME strict_json COMMAND missionweaveprotocol_json_test)

add_executable(missionweaveprotocol_schema_test schema_test.cpp)
target_link_libraries(missionweaveprotocol_schema_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_schema_test PRIVATE cxx_std_20)
target_compile_definitions(missionweaveprotocol_schema_test
                           PRIVATE MISSIONWEAVEPROTOCOL_SCHEMA_TEST_HOOKS)
target_include_directories(missionweaveprotocol_schema_test PRIVATE ${PROJECT_SOURCE_DIR}/src)
add_test(NAME schema COMMAND missionweaveprotocol_schema_test)

add_executable(missionweaveprotocol_conformance_test conformance_test.cpp)
target_link_libraries(missionweaveprotocol_conformance_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_conformance_test PRIVATE cxx_std_20)
add_test(NAME conformance COMMAND missionweaveprotocol_conformance_test)

add_executable(missionweaveprotocol_canonical_test canonical_test.cpp)
target_link_libraries(missionweaveprotocol_canonical_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_canonical_test PRIVATE cxx_std_20)
add_test(NAME canonical COMMAND missionweaveprotocol_canonical_test)

add_executable(missionweaveprotocol_crypto_test crypto_test.cpp)
target_link_libraries(missionweaveprotocol_crypto_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_crypto_test PRIVATE cxx_std_20)
add_test(NAME crypto COMMAND missionweaveprotocol_crypto_test)

add_executable(missionweaveprotocol_signed_document_test signed_document_test.cpp)
target_link_libraries(missionweaveprotocol_signed_document_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_signed_document_test PRIVATE cxx_std_20)
target_include_directories(missionweaveprotocol_signed_document_test PRIVATE ${PROJECT_SOURCE_DIR}/src)
add_test(NAME signed_document COMMAND missionweaveprotocol_signed_document_test)

add_executable(missionweaveprotocol_frame_test frame_test.cpp)
target_link_libraries(missionweaveprotocol_frame_test PRIVATE MissionWeaveProtocol::sdk)
target_compile_features(missionweaveprotocol_frame_test PRIVATE cxx_std_20)
add_test(NAME frame COMMAND missionweaveprotocol_frame_test)

set(
  MISSIONWEAVEPROTOCOL_TEST_TARGETS
  missionweaveprotocol_foundation_test
  missionweaveprotocol_bundle_test
  missionweaveprotocol_json_test
  missionweaveprotocol_schema_test
  missionweaveprotocol_conformance_test
  missionweaveprotocol_canonical_test
  missionweaveprotocol_crypto_test
  missionweaveprotocol_signed_document_test
  missionweaveprotocol_frame_test)

foreach(target IN LISTS MISSIONWEAVEPROTOCOL_TEST_TARGETS)
  if(MSVC)
    target_compile_options(${target} PRIVATE /UNDEBUG)
  else()
    target_compile_options(${target} PRIVATE -UNDEBUG)
  endif()
endforeach()
